# AutoDiff_on_Manifold

./: CMakeLists.txt  LICENSE  README.md  clang_format.py  run.sh
data/: feature_and_map_points.txt  local_map.txt
src/: colordef.h  pose_estimation_test.cc  pose_estimator.h  re_projection_error.h  se3.h  timer.h  type.h
src/viewer/: viewer.cc  viewer.h
